# Chip-8-Emulator

./: .gitmodules  CMakeLists.txt  README.md  app.c  app.h  chip8.c  chip8.h  instruction_tables.c  instruction_tables.h  main.c  screen.c  screen.h  sdl.c  sdl.h  type_defs.h
